ipc/ipdl/test/ipdl/ok/PManagedEndpointManager.ipdl
include protocol PManagedEndpointDecl;

namespace mozilla {

protocol PManagedEndpointManager {
  manages PManagedEndpointDecl;

child:
  async Message(ManagedEndpoint<PManagedEndpointDeclParent> aEndpointParent,
                ManagedEndpoint<PManagedEndpointDeclChild> aEndpointChild);
};

}

